Delete package-lock.json.orig
