# docs/openapi_3.yaml
@@ -1,111 +1,117 @@
 ﻿openapi: 3.0.0
-servers:
-  # Added by API Auto Mocking Plugin
-  # Added by API Auto Mocking Plugin
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/ericryanbowser/Calc_API/1.0.0
-  - description: SwaggerHub API Auto Mocking
-    url: https://app.swaggerhub.com/apis/ericryanbowser/Calc_API/1.0.0#/
 info:
-  description: This is a simple Calc API
-  version: "1.0.0"
   title: Simple Calc API
+  description: This is a simple Calc API
   contact:
-    email: ericryanbowser@gmail.com
-  license:
-    name: Apache 2.0
-    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-tags:
-  - name: admins
-    description: Secured Admin-only calls
-  - name: developers
-    description: Operations available to regular developers
+    email: eric@erb-tech.com
+  version: 1.0.0
 paths:
   /add:
     post:
       summary: adds two numbers
-      operationId: add
       description: Adds two operands and returns the result
-      responses:
-        '200':
-          description: Numbers added!
-        '400':
-          description: 'invalid input, object invalid'
-        '500':
-          description: 'server error'
+      operationId: add
       requestBody:
+        description: Adds numbers
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Operands'
-        description: Adds numbers
+      responses:
+        "200":
+          description: 200OK
+        "400":
+          description: "bad request"
+        "500":
+          description: server error
   /sub:
     post:
       summary: Subtracts first number from the second
-      operationId: Sub
       description: Subtracts two numbers
-      responses:
-        '200':
-          description: Numbers reduced!
-        '400':
-          description: 'invalid input, object invalid'
-        '500':
-          description: 'server error'
+      operationId: Sub
       requestBody:
+        description: Subtracts numbers
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Operands'
-        description: Subtracts numbers
+      responses:
+        "200":
+          description: 200OK
+        "400":
+          description: "bad request"
+        "500":
+          description: server error
   /mult:
     post:
       summary: Multiplies operands
-      operationId: mult
       description: multiplies two numbers
-      responses:
-        '200':
-          description: Numbers timesed!
-        '400':
-          description: 'invalid input, object invalid'
-        '500':
-          description: 'server error'
+      operationId: mult
       requestBody:
+        description: Multiplies numbers
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Operands'
-        description: Multiplies numbers
+      responses:
+        "200":
+          description: 200OK
+        "400":
+          description: "bad request"
+        "500":
+          description: server error
   /div:
     post:
       summary: Divides operands
-      operationId: div
       description: divides two numbers
-      responses:
-        '200':
-          description: Numbers div!
-        '400':
-          description: 'invalid input, object invalid'
-        '500':
-          description: 'server error'
+      operationId: div
       requestBody:
+        description: Divides numbers
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Operands'
-        description: Divides numbers
+      responses:
+        "200":
+          description: 200OK
+        "400":
+          description: "bad Request"
+        "500":
+          description: server error
+  /sqrt:
+    post:
+      summary: Square root of a number
+      description: Square root of a number
+      operationId: sqrt
+      requestBody:
+        description: Square root of a number
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/sqrt'
+      responses:
+        "200":
+          description: 200OK
+        "400":
+          description: "bad request"
+        "500":
+          description: server error
 components:
   schemas:
     Operands:
+      required:
+        - left
+        - right
       type: object
-      required: [
-        leftOperand,
-        rightOperand
-      ]
-      
       properties:
-        leftOperand:
+        left:
           type: number
           example: 1
-        rightOperand:
+        right:
           type: number
           example: 48030
+    sqrt:
+      required:
+        - sqrt
+      type: number
+      example: 100
